marker mouse hover title effect added. addresses added to list.zip code errors and no results message added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h2> Art Museum Search </h2>
 				<form class="zipcodeForm">
 					<label for="ZipCode">Please Enter Your Zipcode: </label>
-					<input id="ZipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="Zip Code: 00000">
+					<input id="ZipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
 					<button type="submit" id="ZipCodeButton">Submit</button>
 				</form>
 			</div>
@@ -29,18 +29,17 @@
 
 	<div class="row">
 		<div class="col-6">
-			Results Title Here
+			<div class="resultsTitle"> </div>
 
 		</div>
 
 		<div class="col-6">
-			Map Title?
+			<div class="mapTitle"></div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-6">
-			Results Go Here
-
+			<div class="listItems"></div>
 		</div>
 
 		<div class="col-6">
