--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
 
 	<div class="row">
 		<div class="col-6">
-			<div class="resultsTitle"> </div>
+			<div class="mapTitle"></div>
 
 		</div>
 
 		<div class="col-6">
-			<div class="mapTitle"></div>
+			
+			<div class="resultsTitle"> </div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-6">
-			<div class="listItems"></div>
+			<div id="map"></div>
+			
 		</div>
 
 		<div class="col-6">
-			<div id="map">
-				
-			</div>
+			<div class="listItems"></div>
 		</div>
 	</div>
 	
