added infowindows to markers

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="row">
 			<div class="col-12">
 				<h2> Art Museum Search </h2>
+				<div class="intro">Looking for art museums near you? You can search for below with your zipcode to find art museums in your area.</div>
 				<form class="zipcodeForm">
 					<label for="ZipCode">Please Enter Your Zipcode: </label>
 					<input id="ZipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
