--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 	<header role="banner">
 		<div class="row">
 			<div class="col-12">
-				<h2> Art Museum Search </h2>
-				<div class="intro">Looking for art museums near you? You can search for below with your zipcode to find art museums in your area.</div>
-				<form class="zipcodeForm">
-					<label for="ZipCode">Please Enter Your Zipcode: </label>
-					<input id="ZipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
-					<button type="submit" id="ZipCodeButton">Submit</button>
-				</form>
+
+				<div class="inLine"> <div class="appTitle">Art Museum Search </div>
+					<div class="intro"><p>Looking for art museums near you? This application allows you to check the location of art museums near you. You can take a look at the locations and see whether are not the art museums are currently open. You can also get the street address of each museum in your area and check out ratings for the museums to see if the trip is going to be worthwhile.</p> <p> You can start your search for local art museums below.</p>
+					</div>
+					<form class="zipcodeForm">
+						<label for="ZipCode">Please Enter Your Zipcode: </label>
+						<input id="ZipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
+						<button type="submit" id="ZipCodeButton">Submit</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -54,6 +57,6 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjKDslBbyf26RmhvnRA-GT9ChfcS-qOc&libraries=places&callback=initMap">
 </script>
 <script src="index.js"></script>
-
+<script src="rater.js"></script>
 </body>
 </html>
