--- a/index.html
+++ b/index.html
@@ -1,66 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8" name="description" content="THis website is used to find art galleries near you!">
     <meta name="viewport" content="width=device-width">
 	<title>Art Museums</title>
 	 <!-- fonts  -->
-    <script
-          src="https://code.jquery.com/jquery-3.2.1.min.js"
+    <script 
+    	  src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
           crossorigin="anonymous"></script>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="fluid.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic" rel="stylesheet">
-
 </head>
+
 <body>
 
 	<header role="banner">
 		<div class="row">
 
-				<div class="appTitle">Art Escape</div>
-				<div class="intro"><p>Looking for art museums near you?</p> <p>This application allows you to check the location of art museums near you. You can take a look at the locations and see whether are not the art museums are currently open. You can also get the street address of each museum in your area and check out ratings for the museums to see if the trip is going to be worthwhile.</p> <p> You can start your search for local art museums below.</p>
-				</div>
-				
-					<div class="zipHeading">
-							<form class="zipCodeForm" >
-								<label id="zipLabel"></label>
-								<label for="ZipCode" id="enterLabel">Please Enter Your Zip Code: </label>
-								<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
-								<button type="submit" id="zipCodeButton">Submit</button>
-							</form>
-					</div>
+			<div class="appTitle">Art Escape</div>
+			<div class="intro"><p>Looking for art museums near you?</p> 
+				<p>This application allows you to check the location of art museums near you. 
+				You can take a look at the locations and see whether are not the art museums are currently open. 
+				You can also get the street address of each museum in your area and check out ratings for the museums to see if the trip is going to be worthwhile.</p> 
+				<p> You can start your search for local art museums below.</p>
+			</div>
+			
+			<div class="zipHeading">
+				<form class="zipCodeForm" >
+					<label id="zipLabel"></label>
+					<label for="ZipCode" id="enterLabel">Please Enter Your Zip Code: </label>
+					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
+					<button type="submit" id="zipCodeButton">Submit</button>
+				</form>
+			</div>
 		</div>
 	</header>
-<main role="main">
 
-	<div class="row">
-		<div class="col-6">
-			<div class="mapTitle"></div>
+	<main role="main">
+		<div class="row">
 
+			<div class="col-6">
+				<div class="mapTitle"></div>
+			</div>
+
+			<div class="col-6">
+				<div class="resultsTitle"> </div>
+			</div>
 		</div>
 
-		<div class="col-6">
-			
-			<div class="resultsTitle"> </div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-6">
-			<div id="map"></div>
-			
-		</div>
+		<div class="row">
 
-		<div class="col-6">
-			<div class="listItems"></div>
+			<div class="col-6">
+				<div id="map"></div>
+			</div>
+
+			<div class="col-6">
+				<div class="listItems"></div>
+			</div>
 		</div>
-	</div>
-	
-</main>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjKDslBbyf26RmhvnRA-GT9ChfcS-qOc&libraries=places&callback=initMap">
-</script>
-<script src="index.js"></script>
-<script src="rater.js"></script>
+	</main>
+
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjKDslBbyf26RmhvnRA-GT9ChfcS-qOc&libraries=places&callback=initMap">
+	</script>
+	<script src="index.js"></script>
+	<script src="rater.js"></script>
 </body>
 </html>
