--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" name="description" content="THis website is used to find art galleries near you!">
+	<meta charset="utf-8" name="description" content="This website is used to find art galleries near you!">
     <meta name="viewport" content="width=device-width">
 	<title>Art Museums</title>
 	 <!-- fonts  -->
@@ -21,10 +21,14 @@
 		<div class="row">
 
 			<div class="appTitle">Art Escape</div>
-			<div class="intro"><p>Looking for art museums near you?</p> 
-				<p>This application allows you to check the location of art museums near you. 
-				You can take a look at the locations and see whether are not the art museums are currently open. 
-				You can also get the street address of each museum in your area and check out ratings for the museums to see if the trip is going to be worthwhile.</p> 
+			<div class="intro">
+				<p>Looking for art museums near you?</p> 
+				<p>
+					This application allows you to check the location of art museums near you. 
+					You can take a look at the locations and see whether are not the art museums 
+					are currently open. You can also get the street address of each museum in your 
+					area and check out ratings for the museums to see if the trip is going to be worthwhile.
+				</p> 
 				<p> You can start your search for local art museums below.</p>
 			</div>
 			
