--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<form class="zipCodeForm" >
 					<label id="zipCodeForm"></label>
 					<label id="zipLabel"></label>
-					<label for="ZipCode" id="enterLabel">Please Enter Your Zip Code: </label>
+					<label for="zipCode" id="enterLabel">Please Enter Your Zip Code: </label>
 					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
 					<button type="submit" id="zipCodeButton">Submit</button>
 				</form>
