working on my zipcode form for mobile view after init submit

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 				<form class="zipCodeForm" >
 					<label id="zipCodeForm"></label>
 					<label id="zipLabel"></label>
-					<label for="zipCode" id="enterLabel">Please Enter Your Zip Code: </label>
+					<label for="zipCode" id="enterLabel">Please Enter Your Zip Code</label>
 					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
-					<button type="submit" id="zipCodeButton">Submit</button>
+					<button type="submit" class="zipCodeButton">Submit</button>
 				</form>
 			</div>
 		</div>
