modified background and fonts. Trying out opacity backgrounds

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
           crossorigin="anonymous"></script>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="fluid.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic|Oswald" rel="stylesheet">
 </head>
 
 <body>
 
 	<header role="banner">
+		<div class="appTitle">Art Escape</div>
 		<div class="row">
 
-			<div class="appTitle">Art Escape</div>
+			
 			<div class="intro">
 				<p>Looking for art museums near you?</p> 
 				<p>
