--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="fluid.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
 <body>
@@ -22,6 +23,7 @@
 		<div class="row">
 			<div class="appTitle"><span class="art">Art</span> Escape</div>
 			
+				
 			<div class="intro">
 				<p>Looking for art museums near you?</p> 
 				<p>
@@ -30,18 +32,20 @@
 					are currently open. You can also get the street address of each museum in your 
 					area and check out ratings for the museums to see if the trip is going to be worthwhile.
 				</p> 
-				<p> You can start your search for local art museums below.</p>
+				<p id="bottomP"> You can start your search for local art museums below.</p>
 			</div>
 			
 			<div class="zipHeading">
 				<form class="zipCodeForm" >
 					<label id="zipCodeForm"></label>
 					<label id="zipLabel"></label>
-					<label for="zipCode" id="enterLabel">Please Enter Your Zip Code</label>
-					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="00000">
-					<button type="submit" class="zipCodeButton">Submit</button>
+					<label for="zipCode" id="enterLabel"></label>
+					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="Enter Your Zip Code">
+					<button type="submit" class="zipCodeButton"><span class="fas fa-search"></span></button>
 				</form>
 			</div>
+
+
 		</div>
 	</header>
 
