--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<label id="zipCodeForm"></label>
 					<label id="zipLabel"></label>
 					<label for="zipCode" id="enterLabel"></label>
-					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="Enter Your Zip Code">
+					<input id="zipCode" name="ZipCode" type="text" pattern="[0-9]{5}" placeholder="Enter Zip Code">
 					<button type="submit" class="zipCodeButton"><span class="fas fa-search"></span></button>
 				</form>
 			</div>
